@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Feb 2010; Froxlor Release Team <release@froxlor.org>
+  froxlor-0.9.1.ebuild, froxlor-9999.ebuild:
+  do not block a dovecot 1.2 upgrade due to usedeps
+
   21 Feb 2010; Froxlor Release Team <release@froxlor.org>
   froxlor-0.9.1.ebuild, froxlor-9999.ebuild, metadata.xml:
   add realtime useflag (no configuration yet, just ensure we have the right
